--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "prepare": "husky",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.22.0",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
-    "pg": "^8.16.3"
+    "nodemailer": "^7.0.10",
+    "otp-generator": "^4.0.1",
+    "pg": "^8.16.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
@@ -32,12 +40,10 @@
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2"
   },
-
   "lint-staged": {
-  "*.{js,ts,jsx,tsx}": [
-    "eslint --fix",
-    "prettier --write"
-  ]
-}
-
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  }
 }
