--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "printWidth": 80,
+  "trailingComma": "all",
+  "printWidth": 100,
   "tabWidth": 2
 }
